# FDDB

./: README.md  RoadMap.md
CascadeModels/LBP/: LBP_48x48_St-7_Pos5k_Neg-15k.xml  LBP_GAB_48x48_St-10_Pos-24k_Neg12k_Dep1.xml  LBP_GAB_48x48_St-10_Pos-5k_Neg-15k_Dep4.xml  LBP_GAB_48x48_St-13_Pos-24k_Neg-24k_Dep1.xml  LBP_GAB_48x48_St-13_Pos-5k_Neg-10k_Dep1.xml  LBP_GAB_48x48_St-16_Pos-5k_Neg-5k_Dep4.xml  LBP_GAB_48x48_St-7_Pos-5k_Neg-15k_Dep4.xml
Create_Rectangles_For_AnnotationFaces/: annotation.txt
Create_Rectangles_For_AnnotationFaces/Script/: BioID.py  CIE_Biomatrics.py  CMU_rect.py  Caltech.py  CheckPointRect.py  FEI.py  Genki.py  IMM.py  MUCT.py  annot_rect_error.cpp  colorFERET.py  replays.py
ItlabFaceDetector/: CMakeLists.txt  file.lua  main.cpp
ItlabFaceDetector/imgs/: file1.txt  file2.txt  getNegFiles.py  lfw_ffd_ann.txt  neg.txt  pos.txt  stat.txt
ItlabFaceDetector/include/: Classifier.hpp  Detector.hpp  DigitClassifier.hpp  FacesClassifier.hpp
ItlabFaceDetector/net/: CNN-face-preproc.net  CNN-face.net  CNN-faces-2.net  CNN-faces.net  CNN.net  LeNet.net  linear-MNIST.net  linear-MNIST2.net
ItlabFaceDetector/samples/: CMakeLists.txt  digitDetector.cpp  facesDetector.cpp  genNegative.cpp  getNegatives.cpp  getPositives.cpp  testFacesDetector.cpp
ItlabFaceDetector/scripts/: faces.lua  file.lua
ItlabFaceDetector/src/: CMakeLists.txt  Classifier.cpp  Detector.cpp  DigitClassifier.cpp  FacesClassifier.cpp
Roc-curves/: drawRocCurve.pl  plot.py  plot_FPPF_TPR.py
Roc-curves/RocCurveCoord/: ContROC.txt  DiscROC.txt
Roc-curves/lbp/: ContROC.txt  DiscROC.txt
Sliding Window/: Classify.h  FaceClassif.h  FaceDetec.h  main.cpp
Utilits_for_DataSet/: Utilits_for_DataSet.sln
Utilits_for_DataSet/Utilits_for_DataSet/: Form1.Designer.cs  Form1.cs  Program.cs  Utilits_for_DataSet.csproj
Utilits_for_DataSet/Utilits_for_DataSet/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
fddb_evaluate/: Makefile  OpenCVUtils.cpp  OpenCVUtils.hpp  Region.hpp  evaluate.cpp  gnuplor  runEvaluate.pl  tempContROC.txt  tempDiscROC.txt
opencv_faces_detect/: lbp_fd.cpp
opencv_faces_detect/FDDB-folds/: for_test_with_FDDB-02.txt
